--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav>
         <a href wm-link="home.html" wm-destino=".pagina">Home</a> |
         <a href wm-link="jogos.html" wm-destino=".pagina">Jogos</a> |
-        <a href wm-link="info.html" wm-destino=".pagina">Info</a>
+        <a href wm-link="sobre.html" wm-destino=".pagina">Info</a>
     </nav>
 
     <div class="pagina">
