--- a/jogos.html
+++ b/jogos.html
@@ -14,6 +14,6 @@
 
 <div class="jogos">
     <h2>Brawhalla</h2>
-    <img src="https://www.google.com/imgres?q=Brawlhalla&imgurl=https%3A%2F%2Fcabanadoleitor.com.br%2Fwp-content%2Fuploads%2F2020%2F07%2FBrawlhalla-Ubisoft.jpg&imgrefurl=https%3A%2F%2Fcabanadoleitor.com.br%2Fe3-2021-anunciado-crossover-das-tartarugas-ninja-no-game-brawlhalla%2F&docid=rDWX2At845XSBM&tbnid=dMkPGy-Y0ReEXM&vet=12ahUKEwie0PWy0PaPAxVOiJUCHdlDH0kQM3oECDIQAA..i&w=1920&h=1080&hcb=2&ved=2ahUKEwie0PWy0PaPAxVOiJUCHdlDH0kQM3oECDIQAA" alt="Brawhalla" width="300">
+    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ0uyhraw1g14LvChYz-K7pjjCePI7aq4TMMSIYdoBkWrx1Z67Z4UHVpnh5fcscFUT0iD7FHjOzvkUTxBxEnNXt0f3I_wSuYAH9WtWNIAR2" alt="Brawhalla" width="300">
     <p>Um jogo de luta com padões de ataque apra jogar sozinho, em equipe, com amigos ou bots com diversos personagens!</p>
 </div>
