--- a/sobre.html
+++ b/sobre.html
@@ -1,19 +1,20 @@
+
 <h1>Lores Inesquecíveis</h1>
 
-<div class="info">
-    <h2>Hollow Knight</h2>
-    <img src="https://www.google.com/imgres?q=hollow%20knight&imgurl=https%3A%2F%2Fwindowsclub.com.br%2Fwp-content%2Fuploads%2F2018%2F08%2Fhollow-knight.jpg&imgrefurl=https%3A%2F%2Fwindowsclub.com.br%2Fxbox-diz-que-os-proximos-jogos-incluem-hollow-knight-silksong-alguma-novidade-em-breve%2F&docid=_-EP7iIAKFL7XM&tbnid=_DdmU-7b1digZM&vet=12ahUKEwi2qd3_0faPAxUArZUCHQQbEnYQM3oFCIoBEAA..i&w=786&h=444&hcb=2&ved=2ahUKEwi2qd3_0faPAxUArZUCHQQbEnYQM3oFCIoBEAA" alt="A Night at the Opera" width="200">
-    <p><strong>A Night at the Opera</strong> (1975) é considerado o auge criativo da banda, com a icônica "Bohemian Rhapsody". <strong>News of the World</strong> (1977) trouxe hinos como "We Will Rock You" e "We Are the Champions".</p>
+<div class="sobre">
+    <h2>Hollowknight</h2>
+    <img src="https://www.google.com/imgres?q=hollow%20knight&imgurl=https%3A%2F%2Fblogger.googleusercontent.com%2Fimg%2Fb%2FR29vZ2xl%2FAVvXsEiL1ksBmiZYz4gD4YGAboCyIVJ9Zl_QjY9BUGoELsLDaXl7dRr4HGzIlcpLDaANbqsMi9PDLDS3dJDGTvVeokUGVuPUO7_HmRmG9a0Wl15XgpVf94t9BFcF8u0Zy9ktvcz5bBlt3SbRmxld%2Fw1200-h630-p-k-no-nu%2Fhollow-knight-capa-01.jpg&imgrefurl=https%3A%2F%2Fwww.gameblast.com.br%2F2017%2F03%2Fhollow-knight-analise-review.html&docid=stJo__7ixyXi6M&tbnid=jBAk2Zfkem9EQM&vet=12ahUKEwi69qChnv6PAxUKGrkGHdJiPLwQM3oECGgQAA..i&w=1200&h=630&hcb=2&ved=2ahUKEwi69qChnv6PAxUKGrkGHdJiPLwQM3oECGgQAA" alt="Hollowknight" width="300">
+    <p>Um jogo que se passa em lugares sombrios e que despertam curiosidade. Destrua monstros, decore padrões e explore!</p>
 </div>
 
-<div class="info">
+<div class="sobre">
     <h2>Rainbow Six</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/13/PinkFloydWallCoverOriginalNoText.jpg/500px-PinkFloydWallCoverOriginalNoText.jpg" alt="The Wall" width="200">
-    <p><strong>The Wall</strong> (1979) é um álbum conceitual sobre isolamento e repressão. <strong>Dark Side of the Moon</strong> (1973) é uma obra-prima do rock progressivo com temas filosóficos e produção inovadora.</p>
+    <img src="https://www.google.com/imgres?q=raiboiw%20six&imgurl=https%3A%2F%2Fstaticctf.ubisoft.com%2FJ3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn%2F1GUGTgi7diwlJlK2bQuD7d%2F1034c84cf28498b2baa56b4f55ef1dee%2Fr6sx-heroBanner.jpg&imgrefurl=https%3A%2F%2Fwww.ubisoft.com%2Fpt-br%2Fhelp%2Fgame%2Frainbow-six-siege&docid=FPyVTuCQfVIdcM&tbnid=h5Z5KUKmSM311M&vet=12ahUKEwi7r9WJnv6PAxUrIrkGHfygDVQQM3oECCkQAA..i&w=3840&h=1076&hcb=2&ved=2ahUKEwi7r9WJnv6PAxUrIrkGHfygDVQQM3oECCkQAA" alt="Rainbow Six" width="300">
+    <p>Um jogo de tiro online que necessita de trabalho em quipe uma boa mira! Vai encarar?</p>
 </div>
 
-<div class="info">
+<div class="sobre">
     <h2>Brawhalla</h2>
-    <img src="https://translate.google.com/website?sl=en&tl=pt&hl=pt&client=srp&u=https://upload.wikimedia.org/wikipedia/en/2/26/Led_Zeppelin_-_Led_Zeppelin_IV.jpg" alt="Led Zeppelin IV" width="200">
-    <p><strong>IV</strong> (1971) contém o clássico "Stairway to Heaven", enquanto <strong>Physical Graffiti</strong> (1975) mostra a versatilidade da banda em um álbum duplo repleto de peso e melodia.</p>
+    <img src="https://www.google.com/imgres?q=brawlhalla&imgurl=https%3A%2F%2Fsm.ign.com%2Ft%2Fign_br%2Fscreenshot%2Fdefault%2Fblob_3y2m.1200.jpg&imgrefurl=https%3A%2F%2Fbr.ign.com%2Fbrawlhalla%2F131089%2Ffeature%2Ffizemos-muita-pesquisa-para-que-ela-representasse-a-cultura-brasileira-chegada-da-capoeirista-vivi-e&docid=k9UVqB_-7N90XM&tbnid=rd9hl9BZIXI8YM&vet=12ahUKEwiIzN7bnf6PAxXuLLkGHbhhAN0QM3oECGgQAA..i&w=1200&h=675&hcb=2&ved=2ahUKEwiIzN7bnf6PAxXuLLkGHbhhAN0QM3oECGgQAA" alt="Brawhalla" width="300">
+    <p>Um jogo de luta com padões de ataque apra jogar sozinho, em equipe, com amigos ou bots com diversos personagens!</p>
 </div>
