--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jogos incríveis - SPA</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <style>
         nav {
             font-size: 1.5em;
@@ -14,7 +14,7 @@
 
         nav a {
             text-decoration: none;
-            color: #FFF;
+            color: #2773ff;
             padding: 0 20px;
         }
 
@@ -25,7 +25,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #222;
-            color: #eee;
+            color: #a8b0fa;
             margin: 0;
         }
 
